Delete folde and files once downloded or failed related changes. And Table schema updated.

--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -21,7 +21,7 @@
     overflow: auto;
   }
 
-  .modal-xl {
+  card-tile .modal-xl {
     max-width: 95%;
   }
 
@@ -907,7 +907,7 @@
     width: 22%;
     padding: 0px;
     display: flex;
-    height: 200px;
+    height: 220px;
   }
 
   .mat-paginator-page-size {
