--- a/App/ClientApp/src/app/layout/asset-libraries/list-asset-library/list-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/list-asset-library/list-asset-library.component.html
@@ -31,7 +31,10 @@
 
           <ng-container matColumnDef="description">
             <th class="width48 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let element">{{element.Description}} </td>
+            <td mat-cell *matCellDef="let element">
+              <span *ngIf="element.Description==null">-</span>
+              <span *ngIf="element.Description!=null">{{element.Description}} </span>
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
