--- a/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
@@ -44,7 +44,11 @@
       <div class="row">
         <div class="col-md-8 col-lg-6">
           <label id="lblDescription">Description</label>
-          <div>{{assetLibrary.Description}}</div>
+          <div>
+            <!--{{assetLibrary.Description}}-->
+            <span *ngIf="assetLibrary.Description==null">-</span>
+            <span *ngIf="assetLibrary.Description!=null">{{assetLibrary.Description}} </span>
+          </div>
         </div>
       </div>
     </div>
