--- a/App/ClientApp/src/app/layout/roles/list/list.component.html
+++ b/App/ClientApp/src/app/layout/roles/list/list.component.html
@@ -5,8 +5,8 @@
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
-      <button class="btn-add btn-cust" id="btnAddRoles" (click)="navigateToRoleAdd()" 
-        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Create' }))">
+      <button class="btn-add btn-cust" id="btnAddRoles" (click)="navigateToRoleAdd()"
+              *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Create' }))">
         <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Role
       </button>
 
@@ -23,101 +23,104 @@
         </div>
       </div>
       <div class="widget-area-grid padding-0">
-      <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
-        <!-- Position Column -->
-        <ng-container matColumnDef="name">
-          <th class="width30 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-          <td mat-cell *matCellDef="let role">{{role.Name}}</td>
-        </ng-container>
+        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
+          <!-- Position Column -->
+          <ng-container matColumnDef="name">
+            <th class="width30 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let role">{{role.Name}}</td>
+          </ng-container>
 
-        <ng-container matColumnDef="description">
-          <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-          <td mat-cell *matCellDef="let role">{{role.Description}} </td>
-        </ng-container>
+          <ng-container matColumnDef="description">
+            <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+            <td mat-cell *matCellDef="let role">
+              <span *ngIf="role.Description==null">-</span>
+              <span *ngIf="role.Description!=null">{{role.Description}} </span>
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="active">
-          <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Active </th>
-          <td mat-cell *matCellDef="let element">
-            <span *ngIf="element.IsActive">Yes</span>
-            <span *ngIf="!element.IsActive">No</span>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="active">
+            <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Active </th>
+            <td mat-cell *matCellDef="let element">
+              <span *ngIf="element.IsActive">Yes</span>
+              <span *ngIf="!element.IsActive">No</span>
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="actions">
-          <th class="width20 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
-          <td mat-cell *matCellDef="let role">
-            <div class="action-btns btn-tbl-action">
-              <button type="button" id="btnViewRole" title="View Role" (click)="navigateToRoleView(role)"
-                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'View' }))">
+          <ng-container matColumnDef="actions">
+            <th class="width20 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let role">
+              <div class="action-btns btn-tbl-action">
+                <button type="button" id="btnViewRole" title="View Role" (click)="navigateToRoleView(role)"
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'View' }))">
                   <span class="fa fa-file-text-o"></span>
-              </button>
-              <button type="button" id="btnUpdateRole" title="Update Role" (click)="navigateToRoleEdit(role)" 
-                  *ngIf="((role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
+                </button>
+                <button type="button" id="btnUpdateRole" title="Update Role" (click)="navigateToRoleEdit(role)"
+                        *ngIf="((role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
                   <span class="fa fa-pencil-square-o"></span>
-              </button>
-              <!-- <button type="button" id="btnDeleteRole" (click)="deleteRole(role)"
-                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Delete' }))" >
-                  <span class="fa fa-trash-o"></span>
-              </button> -->
-              <button type="button" title="Deactivate Role" (click)="DeactivateRole(role)"
-                *ngIf="((role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
-                <span class="fa fa-toggle-on text-success"></span>
-              </button>
-              <button type="button" title="Activate Role" (click)="ActivateRole(role)"
-                *ngIf="((!role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
-                <span class="fa fa-toggle-off text-success"></span>
-              </button>
-          </div>
-          </td>
-        </ng-container>
+                </button>
+                <!-- <button type="button" id="btnDeleteRole" (click)="deleteRole(role)"
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Delete' }))" >
+                    <span class="fa fa-trash-o"></span>
+                </button> -->
+                <button type="button" title="Deactivate Role" (click)="DeactivateRole(role)"
+                        *ngIf="((role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
+                  <span class="fa fa-toggle-on text-success"></span>
+                </button>
+                <button type="button" title="Activate Role" (click)="ActivateRole(role)"
+                        *ngIf="((!role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
+                  <span class="fa fa-toggle-off text-success"></span>
+                </button>
+              </div>
+            </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-        </div>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
     </div>
   </div>
   <!--desktop view end-->
 
-  <form [formGroup]="roleFilterForm">    
-      <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
-        <div class="filter-head">
-          <label class="m-0">Apply Filter</label>
+  <form [formGroup]="roleFilterForm">
+    <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
+      <div class="filter-head">
+        <label class="m-0">Apply Filter</label>
+      </div>
+      <div class="filter-body-left d-flex flex-column stylescrollbar">
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" class="form-control" id="filterRoleName" formControlName="filterRoleName">
         </div>
-        <div class="filter-body-left d-flex flex-column stylescrollbar">
-          <div class="form-group">
-            <label>Name</label>
-            <input type="text" class="form-control" id="filterRoleName" formControlName="filterRoleName">
-          </div>
-          <div class="form-group">
-            <label>Deactivate Roles</label>
-            <div>
-              <label class="switch d-block">
-                <input type="checkbox" (change)="activationEventCheck($event.target)" id="DeactivateRole" formControlName="DeactivateRole">
-                <span class="slider round"></span>
-              </label>
-            </div>
+        <div class="form-group">
+          <label>Deactivate Roles</label>
+          <div>
+            <label class="switch d-block">
+              <input type="checkbox" (change)="activationEventCheck($event.target)" id="DeactivateRole" formControlName="DeactivateRole">
+              <span class="slider round"></span>
+            </label>
           </div>
         </div>
-        <!--[ngClass]="filterClass"-->
-        <div class="filter-footer">
-          <ul class="nav">
-              <li class="nav-item width33" id="liSearchFilter" title="Search" (click)="searchFilter('search')">
-                  <a class="nav-link p-0">
-                      <span class="fa fa-check"></span>
-                  </a>
-              </li>
-              <li class="nav-item width33" id="liResetFilter" title="Reset" (click)="searchFilter('reset')">
-                  <a class="nav-link p-0">
-                      <span class="fa fa-refresh"></span>
-                  </a>
-              </li>
-              <li class="nav-item width33" id="liCloseFilter" title="Close" (click)="isFilter=!isFilter">
-                  <a class="nav-link p-0">
-                      <span class="fa fa-close"></span>
-                  </a>
-              </li>
-          </ul>
+      </div>
+      <!--[ngClass]="filterClass"-->
+      <div class="filter-footer">
+        <ul class="nav">
+          <li class="nav-item width33" id="liSearchFilter" title="Search" (click)="searchFilter('search')">
+            <a class="nav-link p-0">
+              <span class="fa fa-check"></span>
+            </a>
+          </li>
+          <li class="nav-item width33" id="liResetFilter" title="Reset" (click)="searchFilter('reset')">
+            <a class="nav-link p-0">
+              <span class="fa fa-refresh"></span>
+            </a>
+          </li>
+          <li class="nav-item width33" id="liCloseFilter" title="Close" (click)="isFilter=!isFilter">
+            <a class="nav-link p-0">
+              <span class="fa fa-close"></span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </form>
