--- a/App/ClientApp/src/app/layout/statement-defination/view/view.component.html
+++ b/App/ClientApp/src/app/layout/statement-defination/view/view.component.html
@@ -29,7 +29,7 @@
           <div class="row">
             <div class="col-md-12 col-lg-12 form-group">
               <label id="lblDescription">Description</label>
-              <div><span *ngIf="statement.Description==null">-</span><span *ngIf="statement.Description!=null">{{statement.Description}} </span></div>
+              <div><span *ngIf="statement.Description==''">-</span><span *ngIf="statement.Description!=''">{{statement.Description}} </span></div>
             </div>
           </div>
         </div>
