Role Page Sorting and user list oage bug fixes

--- a/App/ClientApp/src/app/layout/users/list/list.component.html
+++ b/App/ClientApp/src/app/layout/users/list/list.component.html
@@ -201,4 +201,4 @@
   </div>
 </div>
 
-<!--<div class="overlay" [ngClass]="!isFilter? 'hide':'show'"></div>-->
+<div class="overlay" [ngClass]="!isFilter? 'hide':'show'"></div>
