--- a/App/ClientApp/src/app/layout/users/list/list.component.html
+++ b/App/ClientApp/src/app/layout/users/list/list.component.html
@@ -53,7 +53,7 @@
           </ng-container>
           <!-- Symbol Column -->
           <ng-container matColumnDef="role">
-            <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+            <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef> Role </th>
             <td mat-cell *matCellDef="let element"> {{element.Roles[0].Name}} </td>
           </ng-container>
 
