--- a/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
@@ -32,7 +32,7 @@
           </ng-container>
 
           <!-- Name Column -->
-          <ng-container matColumnDef="schedule">
+          <ng-container matColumnDef="statement">
             <th class="width25 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Definition </th>
             <td mat-cell *matCellDef="let element"> {{element.Statement.Name}} </td>
           </ng-container>
