--- a/App/ClientApp/src/app/layout/template/list/list.component.html
+++ b/App/ClientApp/src/app/layout/template/list/list.component.html
@@ -46,7 +46,7 @@
           <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
           <td mat-cell *matCellDef="let element">
             <span *ngIf='element.PagePublishedByUserName!=""'>{{element.PagePublishedByUserName}} </span>
-            <span *ngIf='element.PagePublishedByUserName==""'> - </span>
+            <span *ngIf='element.PagePublishedByUserName==null'> - </span>
           </td>
         </ng-container>
         <ng-container matColumnDef="date">
