--- a/App/ClientApp/src/app/layout/dashboard/dashboard.component.html
+++ b/App/ClientApp/src/app/layout/dashboard/dashboard.component.html
@@ -8,29 +8,29 @@
     <div class="card card-bg-1 card-tile">
       <div class="icon-production-plan-line2 dash-icon-bg-1 dash-icon"></div>
       <div class="dash-in">
-        <h5 class="mb-0">10/06/2020</h5>
-        <div class="font20">Last Completed Schedule Run</div>
+        <h5 class="mb-0">{{DashboardData.LastSCheduleRunDate}}</h5>
+        <div class="font20">Last Schedule Run</div>
       </div>
     </div>
     <div class="card card-bg-2 card-tile">
       <div class="icon-line-dashboard2 dash-icon-bg-2 dash-icon"></div>
       <div class="dash-in">
-        <h5 class="mb-0">12</h5>
-        <div class="font20">No of Completed Statements</div>
+        <h5 class="mb-0">{{DashboardData.GeneratedStatementsOfLastscheduleRun}}</h5>
+        <div class="font20">Generated Statements from Last schedule Run</div>
       </div>
     </div>
     <div class="card card-bg-3 card-tile">
       <div class="icon-operation-parameter-line2 dash-icon-bg-3 dash-icon"></div>
       <div class="dash-in">
-        <h5 class="mb-0">02</h5>
-        <div class="font20">No of Active Exceptions</div>
+        <h5 class="mb-0">{{DashboardData.ActiveExceptionsOfLastscheduleRun}}</h5>
+        <div class="font20">Active Exceptions from Last Schedule Run</div>
       </div>
     </div>
     <div class="card card-bg-4 card-tile">
       <div class="icon-reportGenerations2 dash-icon-bg-4 dash-icon"></div>
       <div class="dash-in">
-        <h5 class="mb-0">02</h5>
-        <div class="font20">Statement Preview Remains</div>
+        <h5 class="mb-0">{{DashboardData.TotalGeneratedStatements}}</h5>
+        <div class="font20">Total Generated Statements</div>
       </div>
     </div>
   </div>
