--- a/App/ClientApp/src/app/layout/roles/add/add.component.html
+++ b/App/ClientApp/src/app/layout/roles/add/add.component.html
@@ -114,7 +114,7 @@
       </div>
     </div>
 
-    <div class="card border-0 mb-2 card-shadow" *ngIf="roleEditModeOn">
+    <!-- <div class="card border-0 mb-2 card-shadow" *ngIf="roleEditModeOn">
       <div class="card-header bg-white d-flex justify-content-between">
         <div>
           <label class="m-0">Users</label>
@@ -141,7 +141,7 @@
           No user found with this role.
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="card border-0 mt-4 mb-3 bg-transparent">
       <div class="card-body p-0">
