side bar menu hide n show on hover bug resolved

--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class='top-bar fixed'>
-  <button class="fa float-left hamburger xs-hamburger fa" (click)="toggleNav()" (mouseenter)="showSidebar()" [ngClass]="collapse_toogleClass"></button>
+  <button class="fa float-left hamburger xs-hamburger fa" (click)="toggleNav()" [ngClass]="collapse_toogleClass"></button>
   <div class="side-bar-logo text-center d-none d-md-block" (click)="navigateToDashoard()" style="cursor: pointer;">
     <img src="assets/images/new_nis_logo_white.png" width="250">
   </div>
@@ -53,7 +53,7 @@
   </ul>
 </div>
 
-<div class="side-bar-container" [ngClass]="sidebar_class">
+<div class="side-bar-container" [ngClass]="sidebar_class" (mouseenter)="showSidebar()" (mouseleave)="hideSidebar()">
   <div class="side-bar-nav stylescrollbar">
     <ul class='side-bar-ul'>
       <li [ngClass]="(URL=='/dashboard')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToDashoard()"
