UI Design- added screens for "Tenants" and changes are done in "Schedule Managemet" screens.

--- a/App/ClientApp/src/app/layout/schedule-management/add/add.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/add/add.component.html
@@ -35,17 +35,48 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-lg-4 form-group">
-            <label id="lblTemplate" for="inputRoleName">Day of Month<span class="text-danger">*</span></label>
-            <select formControlName="DayOfMonth" (change)="onDayOfMonthSelected($event)" class="form-control" [attr.disabled]="IsStartDateDisable?'':null">
-              <option *ngFor="let sd of DayOfMonthList" [value]="sd.Identifier">{{sd.Name}}</option>
-            </select>
-            <div class="validation-msg" style="color:red">
-              <ul *ngIf="scheduleFormErrorObject.dayOfmonthShowError" style="list-style-type:none">
-                <li class="text-danger">
-                  Please select day of month
-                </li>
-              </ul>
+            <label>Recurrance Pattern</label>
+            <div class="width100 form-group d-flex justify-content-start">
+              <div class="custom-control custom-radio mr-2">
+                <input class="custom-control-input" type="radio"
+                       name="recpat" id="Daily" value="option1" checked (click)="isDailyClicked()">
+                <label class="custom-control-label dir-rtl" for="Daily">
+                  Daily
+                </label>
+              </div>
+              <div class="custom-control custom-radio mr-2">
+                <input class="custom-control-input" type="radio"
+                       name="recpat" id="Weekly" value="option1" (click)="isWeeklyClicked()">
+                <label class="custom-control-label dir-rtl" for="Weekly">
+                  Weekly
+                </label>
+              </div>
+              <div class="custom-control custom-radio mr-2">
+                <input class="custom-control-input" type="radio"
+                       name="recpat" id="Monthly" value="option1" (click)="isMonthlyClicked()">
+                <label class="custom-control-label dir-rtl" for="Monthly">
+                  Monthly
+                </label>
+              </div>
+              <div class="custom-control custom-radio">
+                <input class="custom-control-input" type="radio"
+                       name="recpat" id="Yearly" value="option1" (click)="isYearlyClicked()">
+                <label class="custom-control-label dir-rtl" for="Yearly">
+                  Yearly
+                </label>
+              </div>
             </div>
+            <!--<label id="lblTemplate" for="inputRoleName">Day of Month<span class="text-danger">*</span></label>
+      <select formControlName="DayOfMonth" (change)="onDayOfMonthSelected($event)" class="form-control" [attr.disabled]="IsStartDateDisable?'':null">
+        <option *ngFor="let sd of DayOfMonthList" [value]="sd.Identifier">{{sd.Name}}</option>
+      </select>
+      <div class="validation-msg" style="color:red">
+        <ul *ngIf="scheduleFormErrorObject.dayOfmonthShowError" style="list-style-type:none">
+          <li class="text-danger">
+            Please select day of month
+          </li>
+        </ul>
+      </div>-->
           </div>
           <div class="col-md-4 col-lg-4 form-group">
             <label id="lblTemplate" for="inputRoleName">Time for the day (HH : MM) <span class="text-danger">*</span></label>
@@ -77,6 +108,128 @@
             </div>
           </div>
         </div>
+        <div class="row" *ngIf="isDaily">
+          <div class="col-md-8 col-lg-8 form-group">
+            <div class="card border-0 mb-2 card-shadow">
+              <div class="card-body d-flex justify-content-start">
+                <div class="custom-control custom-radio mr-2">
+                  <input class="custom-control-input" type="radio"
+                         name="dailytype" id="opDaily" value="optiondaily" checked>
+                  <label class="custom-control-label dir-rtl" for="opDaily">
+                    <div class="form-inline" style="margin-top:-5px">
+                      <div class="form-group xs-frm">
+                        <label for="" class="dir-ltr">Day</label>
+                        <input type="number" id="" class="form-control mx-sm-2 width20 sm-w-50" min="0">
+                        <label> of every </label>
+                        <input type="number" id="" class="form-control mx-sm-2 width20 sm-w-50" min="0" max="12">
+                        <label> month(s) </label>
+                      </div>
+                    </div>
+                  </label>
+                </div>
+                <div class="custom-control custom-radio">
+                  <input class="custom-control-input" type="radio"
+                         name="dailytype" id="fullWeek" value="optiondaily">
+                  <label class="custom-control-label dir-rtl" for="fullWeek">
+                    Every Weekday
+                  </label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row" *ngIf="isWeekly">
+          <div class="col-md-8 col-lg-8 form-group">
+            <div class="card border-0 mb-2 card-shadow">
+              <div class="card-body">
+                <div class="form-inline mb-2">
+                  <div class="form-group xs-frm">
+                    <label for="" class="dir-ltr">Recur every</label>
+                    <input type="number" id="" class="form-control mx-sm-2 width20 sm-w-50" min="0">
+                    <label> week(s) on: </label>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-start">
+                  <div class="custom-control custom-checkbox mr-2">
+                    <input class="custom-control-input" type="checkbox" value="">
+                    <label class="custom-control-label">   Monday</label>
+                  </div>
+                  <div class="custom-control custom-checkbox mr-2">
+                    <input class="custom-control-input" type="checkbox" value="">
+                    <label class="custom-control-label">   Tuesday</label>
+                  </div>
+                  <div class="custom-control custom-checkbox mr-2">
+                    <input class="custom-control-input" type="checkbox" value="">
+                    <label class="custom-control-label">   Wednesday</label>
+                  </div>
+                  <div class="custom-control custom-checkbox mr-2">
+                    <input class="custom-control-input" type="checkbox" value="">
+                    <label class="custom-control-label">   Thursday</label>
+                  </div>
+                  <div class="custom-control custom-checkbox mr-2">
+                    <input class="custom-control-input" type="checkbox" value="">
+                    <label class="custom-control-label">   Friday</label>
+                  </div>
+                  <div class="custom-control custom-checkbox mr-2">
+                    <input class="custom-control-input" type="checkbox" value="">
+                    <label class="custom-control-label">   Saturday</label>
+                  </div>
+                  <div class="custom-control custom-checkbox">
+                    <input class="custom-control-input" type="checkbox" value="">
+                    <label class="custom-control-label">   Sunday</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row" *ngIf="isMonthly">
+          <div class="col-md-4 col-lg-4 form-group">
+            <div class="card border-0 mb-2 card-shadow">
+              <div class="card-body">
+                <div class="form-inline">
+                  <div class="form-group xs-frm">
+                    <label for="" class="dir-ltr">Day</label>
+                    <input type="number" id="" class="form-control mx-sm-2 width20 sm-w-50" min="0">
+                    <label> of every </label>
+                    <input type="number" id="" class="form-control mx-sm-2 width20 sm-w-50" min="0" max="12">
+                    <label> month(s) </label>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row" *ngIf="isYearly">
+          <div class="col-md-8 col-lg-8 form-group">
+            <div class="card border-0 mb-2 card-shadow">
+              <div class="card-body">
+                <div class="form-inline">
+                  <div class="form-group xs-frm">
+                    <label for="" class="dir-ltr">Recur every </label>
+                    <input type="number" id="" class="form-control mx-sm-2 width20 sm-w-50" min="0">
+                    <label> year(s) on </label>
+                    <select class="form-control  mx-sm-2 width30 sm-w-50">
+                      <option>Select Month</option>
+                      <option>Jan</option>
+                      <option>Feb</option>
+                      <option>Mar</option>
+                      <option>May</option>
+                      <option>Jun</option>
+                      <option>Jul</option>
+                      <option>Aug</option>
+                      <option>Sept</option>
+                      <option>Oct</option>
+                      <option>Nov</option>
+                      <option>Dec</option>
+                    </select>
+                    <input type="number" id="" class="form-control mx-sm-2 width20 sm-w-50" min="0">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-4 col-lg-4 form-group">
             <label>Start Date<span class="text-danger">*</span></label>
@@ -93,48 +246,86 @@
             </div>
           </div>
           <div class="col-md-4 col-lg-4 form-group">
-            <label>End Date</label><span class="text-danger" *ngIf="IsEndDateRequired">*</span>
-            <div class="position-relative">
-              <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filtershiftenddate"
-                     placeholder="Please select end date" readonly (ngModelChange)="onFilterDateChange($event)" [disabled]="!IsEndDateRequired">
-              <span [owlDateTimeTrigger]="dt1" class="datetime-icon" [disabled]="IsEndDateDisable">
-                <i class="fa fa-calendar"></i>
-              </span>
-              <owl-date-time #dt1 [pickerType]="'calendar'" [disabled]="IsEndDateDisable"></owl-date-time>
+            <div class="d-flex justify-content-start">
+              <div class="custom-control custom-radio mr-2">
+                <input class="custom-control-input" type="radio"
+                       name="enddatetype" id="enddate" value="optiondate" checked (click)="isEndDateClicked()">
+                <label class="custom-control-label dir-rtl" for="enddate">
+                  End Date
+                </label>
+              </div>
+              <div class="custom-control custom-radio mr-2">
+                <input class="custom-control-input" type="radio"
+                       name="enddatetype" id="endafter" value="optiondate" (click)="isEndAfterClicked()">
+                <label class="custom-control-label dir-rtl" for="endafter">
+                  End After
+                </label>
+              </div>
+              <!--<div class="custom-control custom-radio mr-2">
+                <input class="custom-control-input" type="radio"
+                       name="enddatetype" id="noenddate" value="optiondate" (click)="isNoEndDateClicked()">
+                <label class="custom-control-label dir-rtl" for="noenddate">
+                  No End date
+                </label>
+              </div>-->
             </div>
-            <div class="text-danger" *ngIf="filterToDateError">
-              {{filterToDateErrorMessage}}
+
+            <!--<label>End Date</label><span class="text-danger" *ngIf="IsEndDateRequired">*</span>-->
+            <div *ngIf="isEndDate">
+              <div class="position-relative">
+                <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filtershiftenddate"
+                       placeholder="Please select end date" readonly (ngModelChange)="onFilterDateChange($event)" [disabled]="!IsEndDateRequired">
+                <span [owlDateTimeTrigger]="dt1" class="datetime-icon" [disabled]="IsEndDateDisable">
+                  <i class="fa fa-calendar"></i>
+                </span>
+                <owl-date-time #dt1 [pickerType]="'calendar'" [disabled]="IsEndDateDisable"></owl-date-time>
+              </div>
+              <div class="text-danger" *ngIf="filterToDateError">
+                {{filterToDateErrorMessage}}
+              </div>
+              <div class="text-danger" *ngIf="filterDateDifferenecError">
+                {{filterDateDiffErrorMessage}}
+              </div>
             </div>
-            <div class="text-danger" *ngIf="filterDateDifferenecError">
-              {{filterDateDiffErrorMessage}}
-            </div>
-          </div>
-          <!--<div class="col-md-4 col-lg-4 form-group">
-            <div class="row">
-              <div class="col-sm-6">
-                <label>No End Date</label>
-                <div>
-                  <label class="switch d-block">
-                    <input type="checkbox" id="inputNoEndDate" formControlName="NoEndDate" [checked]="!IsEndDateRequired" value="" (change)="NoEndDateClicked($event.target)">
-                    <span class="slider round"></span>
-                  </label>
+            <div *ngIf="isEndAfter">
+              <div class="form-inline">
+                <div class="form-group xs-frm">
+                  <label> End After </label>
+                  <input type="number" id="" class="form-control mx-sm-2 width30 sm-w-50" min="0">
+                  <label> occurrences </label>
                 </div>
               </div>
-              <div class="col-sm-6">
-                <label>Export to PDF</label>
-                <div>
-                  <label class="switch d-block">
-                    <input type="checkbox" id="inputExportToPDF" formControlName="ExportToPDF" [checked]="IsExportToPDF" value="" (change)="IsExportToPDFClicked($event.target)">
-
-                    <span class="slider round"></span>
-                  </label>
-                </div>
-              </div>
             </div>
-
-
-          </div>-->
+            <div *ngIf="isNoEndDate">
+              NA
+            </div>
+            </div>
+            <!--<div class="col-md-4 col-lg-4 form-group">
+    <div class="row">
+      <div class="col-sm-6">
+        <label>No End Date</label>
+        <div>
+          <label class="switch d-block">
+            <input type="checkbox" id="inputNoEndDate" formControlName="NoEndDate" [checked]="!IsEndDateRequired" value="" (change)="NoEndDateClicked($event.target)">
+            <span class="slider round"></span>
+          </label>
         </div>
+      </div>
+      <div class="col-sm-6">
+        <label>Export to PDF</label>
+        <div>
+          <label class="switch d-block">
+            <input type="checkbox" id="inputExportToPDF" formControlName="ExportToPDF" [checked]="IsExportToPDF" value="" (change)="IsExportToPDFClicked($event.target)">
+
+            <span class="slider round"></span>
+          </label>
+        </div>
+      </div>
+    </div>
+
+
+  </div>-->
+          </div>
         <div class="row">
 
         </div>
