--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -1529,6 +1529,13 @@
     position: relative;
   }
 
+  .widget-card-small {
+    margin-right: 5px;
+    width: 18%!important;
+    float: left;
+    margin-bottom: 10px;
+  }
+
   .widget-card {
     margin-right: 5px;
     width: 32%;
